dockerfile + readme
