# docs/swagger.json
@@ -49,6 +49,40 @@
                     }
                 }
             }
+        },
+        "/paymentOrders": {
+            "patch": {
+                "description": "endpoint for  liquidation",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Liquidation"
+                ],
+                "summary": "transfer",
+                "parameters": [
+                    {
+                        "description": "liquidation request",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto_liquidation_request.LiquidationReceiveRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "desc",
+                        "schema": {
+                            "$ref": "#/definitions/dto_liquidation_response.LiquidationReceiveResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -61,6 +95,31 @@
                 },
                 "success": {
                     "type": "boolean"
+                }
+            }
+        },
+        "dto_liquidation_request.LiquidationReceiveRequest": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "expectedOn": {
+                    "type": "string"
+                },
+                "externalId": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto_liquidation_response.LiquidationReceiveResponse": {
+            "type": "object",
+            "properties": {
+                "internalId": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
                 }
             }
         },
