# src/presenter/api/dto/liquidation/response/liquidation_receive_response.go
@@ -1,0 +1,6 @@
+package dto_liquidation_response
+
+type LiquidationReceiveResponse struct {
+	InternalId *string `json:"internalId"`
+	Status     *string `json:"status"`
+}
