# src/presenter/api/dto/transfer/request/transfer_receive_request.go
@@ -1,12 +1,14 @@
 package dto_transfer_request
 
-import "time"
+import (
+	dto_common "github.com/gabrielnando1/go_service_transfer/src/presenter/api/dto/common"
+)
 
 type TransferReceiveRequest struct {
-	Amount         *float64   `json:"amount"`
-	ExpirationDate *time.Time `json:"expiration_date"`
-	ExternalId     *string    `json:"external_id"`
-	ExpectedOn     *time.Time `json:"expected_on"`
-	AccountFrom    *string    `json:"account_from"`
-	AccountTarget  *string    `json:"account_target"`
+	Amount         *float64             `json:"amount"`
+	ExpirationDate *dto_common.JSONDATE `json:"expiration_date"`
+	ExternalId     *string              `json:"external_id"`
+	ExpectedOn     *dto_common.JSONDATE `json:"expected_on"`
+	AccountFrom    *string              `json:"account_from"`
+	AccountTarget  *string              `json:"account_target"`
 }
